# build4good2026

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.claude/: settings.local.json
backend/: README.md  main.py  package.json  pyproject.toml
backend/agent/: __init__.py  agent.py  analysis_agent.py  chat_agent.py  validation_agent.py
backend/core/: __init__.py  auth.py  frame_processor.py  graph.py  session_store.py  visual_delta_pipeline.py
backend/docs/: api-reference.md  flow-and-examples.md
backend/graph_mcp/: __init__.py  server.py
backend/server/: app.py  auth.py
backend/src/: index.ts
backend/tests/: conftest.py  test_agent.py  test_analysis_agent.py  test_auth_enforcement.py  test_graph.py  test_integration.py  test_pipeline_manual.py  test_server.py  test_session_store.py  test_validation_agent.py
frontend/: eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  env.d.ts  index.css  main.ts
frontend/src/components/: AppNav.vue
frontend/src/composables/: useMirageAuth.ts  useSessionAnalysis.ts  useWhiteboardSession.ts
frontend/src/router/: index.ts
frontend/src/types/: pastSession.ts
frontend/src/utils/: apiUrl.ts  sessionOutputStorage.ts
frontend/src/views/: ChatView.vue  DashboardView.vue  HomeView.vue  LoginView.vue  SettingsView.vue
frontend/tests/: sessionOutputStorage.test.ts  useSessionAnalysis.test.ts  useWhiteboardSession.test.ts
readmes/: BACKEND_DOCS.md  FRONTEND.md  POST_SESSION_ANALYSIS.md  README.md  SECURITY_FIXES.md  SETUP.md  STREAMING.md
tests/: README.md  visual_delta_pipeline_stream_test.py
