[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.1",
    "fastmcp>=3.1.1",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "mcp>=1.26.0",
    "motor>=3.7.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

