[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "Mirage — backend for real-time system design interview sessions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.1",
    "langchain-core>=0.3",
    "langchain-google-genai>=2.0",
    "motor>=3.7.1",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.2.2",
    "starlette>=0.40",
    "torch>=2.0,<2.3",
    "ultralytics>=8.3.99",
    "uvicorn>=0.30",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "requests>=2.32",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["agent", "core", "server"]

